env/base/main/myapp-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: myapp
    app.kubernetes.io/part-of: liberty
  name: myapp
  namespace: myapp-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: default-route-openshift-image-registry.apps.cluster-lbz56.lbz56.sandbox159.opentlc.com/myapp-ci/myapp-runtime
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
          name: http
          protocol: TCP
