env/base/main/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  labels:
    app: myapp
  namespace: myapp-development
spec:
  ports:
  - name: http
    port: 9080
  selector:
    app: myapp
