env/base/main/myapp-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: myapp
  name: myapp-route
  namespace: myapp-development
spec:
  to:
    kind: Service
    name: myapp
